[package]
name = "rust_json_api"
version = "0.1.0"
authors = ["craig fay <craigfay1@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gotham = "0.4.0"
diesel = { version = "1.4.4", features = ["postgres"] }
dotenv = "0.15.0"
