[package]
name = "rust_json_api"
version = "0.1.0"
authors = ["craig fay <craigfay1@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "2.0"
actix-rt = "1.0.0"
gotham = "0.4.0"
gotham_derive = "0.4.0"
hyper = "0.13.7"
chrono = { version = "0.4.0", features = ["serde"] }
diesel = { version = "1.4.4", features = ["sqlite", "serde_json", "chrono"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.57"
serde_derive = "1.0.114"
dotenv = "0.15.0"
